--- a/markup/new-ticket.html
+++ b/markup/new-ticket.html
@@ -56,8 +56,8 @@
           <div class="ticket-form__content">
             <div class="ticket-form__row">
               <div class="form__field">
-                <input type="text" name="ticket-name" id="ticket-name" class="js-field" required="">
-                <label for="ticket-name">Название</label>
+                <input type="text" name="title" id="title" class="js-field" required="">
+                <label for="title">Название</label>
                 <span>Обязательное поле</span>
               </div>
             </div>
